--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/CihatBaran/NodeJS-API#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.7",
+    "morgan": "^1.10.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
