--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tours-api",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start-dev": "nodemon server.js",
+    "start-prod" :"NODE_ENV=production nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/CihatBaran/NodeJS-API#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
